# DAU-ConvNet

./: .gitmodules  CMakeLists.txt  README.md
cmake/: ConfigGen.cmake  Cuda.cmake  Dependencies.cmake  Targets.cmake  Utils.cmake
cmake/Templates/: DAUConvNetConfig.cmake.in  dau_conv_config.h.in
include/dau_conv/: base_dau_conv_layer.hpp
include/dau_conv/dau_conv_impl/: dau_conv_backward.hpp  dau_conv_backward_core.hpp  dau_conv_forward.hpp  dau_conv_forward_core.hpp
include/dau_conv/util/: common.hpp  convolve.hpp  custom_cub.cuh  im2col.hpp  math_functions.hpp  mkl_alternate.hpp
plugins/tensorflow/: CMakeLists.txt  MANIFEST.in.in  README.md  _base_op_grad.py  _dau_conv_grad_op.py  base_op.cpp  base_op_grad.cpp  base_op_prev.cpp  base_op_tests.py  dau_conv.py  dau_conv_grad_op.cpp  dau_conv_layer_tensorflow.cpp  dau_conv_layer_tensorflow.hpp  dau_conv_op.cpp  dau_conv_test.py  init_test.py  setup.py.in
plugins/tensorflow/build-ci/: build-whl.sh
plugins/tensorflow/dau_conv/: __init__.py  _dau_conv_grad_op.py  dau_conv.py  dau_conv_tf.py
plugins/tensorflow/docker/: Dockerfile  Dockerfile.ubuntu18.04  test_dau.sh  verify_dau_import.py
plugins/tensorflow/scripts/: start_main_build.sh
plugins/tensorflow/src/: dau_conv_grad_op.cpp  dau_conv_layer_tensorflow.cpp  dau_conv_layer_tensorflow.hpp  dau_conv_op.cpp
plugins/tensorflow/tests/: base_op_tests.py  dau_conv_test.py  init_test.py
src/: main.cpp
src/dau_conv/: CMakeLists.txt  base_dau_conv_layer.cpp  base_dau_conv_layer.cu
src/dau_conv/dau_conv_impl/: dau_conv_backward.cpp  dau_conv_backward_patch_16x16.cu  dau_conv_backward_patch_16x32.cu  dau_conv_backward_patch_16x64.cu  dau_conv_backward_patch_16x8.cu  dau_conv_backward_patch_1x1.cu  dau_conv_backward_patch_32x16.cu  dau_conv_backward_patch_32x32.cu  dau_conv_backward_patch_32x64.cu  dau_conv_backward_patch_32x8.cu  dau_conv_backward_patch_64x16.cu  dau_conv_backward_patch_64x32.cu  dau_conv_backward_patch_64x64.cu  dau_conv_backward_patch_64x8.cu  dau_conv_backward_patch_8x16.cu  dau_conv_backward_patch_8x32.cu  dau_conv_backward_patch_8x64.cu  dau_conv_backward_patch_8x8.cu  dau_conv_forward.cpp  dau_conv_forward_off16_s0_f0.cu  dau_conv_forward_off16_s0_f1.cu  dau_conv_forward_off16_s1_f1.cu  dau_conv_forward_off32_s0_f0.cu  dau_conv_forward_off32_s1_f1.cu  dau_conv_forward_off4_s0_f0.cu  dau_conv_forward_off4_s0_f1.cu  dau_conv_forward_off4_s1_f0.cu  dau_conv_forward_off4_s1_f1.cu  dau_conv_forward_off8_s0_f0.cu  dau_conv_forward_off8_s0_f1.cu  dau_conv_forward_off8_s1_f0.cu  dau_conv_forward_off8_s1_f1.cu
src/dau_conv/util/: common.cpp  convolve.cpp  convolve.cu  im2col.cpp  math_functions.cpp  math_functions.cu
